# kiosk

./: .env  .flaskenv  .gitignore  LICENSE.txt  README.md  babel.cfg  main.py  products.txt  pyproject.toml
.githooks/: pre-commit
kiosk/: __init__.py  kiosk.kv  kiosk.py  utils.py
kiosk/app/: __init__.py  kiosk.kv  kiosk.py
kiosk/app/components/: button.kv  button.py  popup.kv  popup.py
kiosk/server/: __init__.py  kiosk.py  storage.py
kiosk/server/templates/: browse.html.j2  style.css.j2
kiosk/translations/pl/LC_MESSAGES/: messages.po
