[tool.poetry]
name = "kiosk"
version = "0.1.0"
description = ""
authors = ["shinycore"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
kivy = "^2.0.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
