[tool.poetry]
name = "kiosk"
version = "0.2.0"
description = ""
authors = ["shinycore"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-babel = "^2.0.0"
kivy = "^2.0.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flakehell = "^0.7.1"
isort = "^5.6.4"
pyflakes = "^2.2.0"

[tool.black]
line-length = 119

[tool.flakehell]
format = "default"

[tool.flakehell.plugins]
pyflakes = ["+*"]

[tool.isort]
line_length = 119
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
